# napari-prism

./: .cruft.json  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  test_and_deploy.yml
docs/: api.md  conf.py  contributing.md  index.md
docs/api/: datasets.md  graph.md  preprocessing.md  tools.md
docs/notebooks/: adata_usage.ipynb  example.ipynb  getting_started.ipynb  import_raw_qptiffs.ipynb
docs/schema/: classes.dot  packages.dot
nsclc4301_truncated.zarr/: zmetadata
nsclc4301_truncated.zarr/images/NSCLC4301/: .zattrs
nsclc4301_truncated.zarr/images/NSCLC4301/0/: .zarray
nsclc4301_truncated.zarr/images/NSCLC4301/1/: .zarray
nsclc4301_truncated.zarr/images/NSCLC4301/2/: .zarray
nsclc4301_truncated.zarr/labels/: ._.zattrs  .zattrs
src/napari_prism/: __init__.py  constants.py  datasets.py  gr.py  im.py  io.py  ml.py  pl.py  pp.py  tl.py
src/napari_prism/datasets/: __init__.py  _small.py
src/napari_prism/models/: _utils.py
src/napari_prism/readers/: _readers.py
src/napari_prism/widgets/: _adata_ops_widget.py  _tma_ops_widget.py  _widget_utils.py
src/prism/: __init__.py  napari.yaml
src/tmaprocessor/: __init__.py  napari.yaml
src/tmaprocessor/readers/: _qptiff_reader.py
src/tmaprocessor/widgets/: _adata_ops_widget.py  _api_access.py  _spatialdata_utils_widget.py  _tma_ops_widget.py  _widget_utils.py
tests/adata/: conftest.py  test_adata_trees.py  test_subsetter.py
tests/adata/cell_typing/: test_augmentation.py  test_clust.py  test_embeddings.py  test_preprocessing.py
tests/adata/feature_modelling/: test_feature_modelling_discrete.py
tests/adata/spatial_analysis/: test_neighborhoods.py  test_pairwise.py  test_simulation.py
tests/models/adata_ops/: test_schema_conversion.py
tests/readers/: conftest.py  test_readers.py
tests/tma/: conftest.py  test_sdata_image_operations.py  test_tma_masker.py  test_widgets.py
(+60 files in other folders)
