[bumpversion]
current_version = 0

[metadata]
name = tmaprocessor
version = attr: tmaprocessor.__version__
description = Process, dearray and segment multiplexed TMA images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/clinicalomx/tmaprocessor
author = Rafael Tubelleza
author_email = rafaelrtubelleza@gmail.com
license = MIT
license_files = LICENSE
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Framework :: napari
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering :: Image Processing
project_urls = 
	Bug Tracker = https://github.com/clinicalomx/tmaprocessor/issues
	Documentation = https://github.com/clinicalomx/tmaprocessor#README.md
	Source Code = https://github.com/clinicalomx/tmaprocessor
	User Support = https://github.com/clinicalomx/tmaprocessor/issues

[options]
packages = find:
install_requires = 
	numpy
	magicgui
	qtpy
	scikit-image
	spatialdata
	imagecodecs
	napari[all]==0.4.19.post1
	napari_matplotlib<2.0.2
	napari_spatialdata
	pyqt5
	matplotlib
	scikit-learn
	cellpose>=3.0.10
	scanpy
	phenograph
	squidpy
	kneed
python_requires = >=3.10
include_package_data = True
package_dir = 
	=src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest = 
	tmaprocessor = tmaprocessor:napari.yaml

[options.extras_require]
testing = 
	tox
	pytest  # https://docs.pytest.org/en/latest/contents.html
	pytest-lazy-fixtures
	pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
	pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
	napari
	pyqt5
docs = 
	sphinx

[options.package_data]
* = *.yaml

[tool:pytest]
python_files = test_*.py
testpaths = tests/
qt_api = pyqt5
